--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ProgramEventRegistration.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ProgramEventRegistration.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Chinmaya.Registration.Models.CurrentEventModel
 @{
 	Layout = "~/Views/Shared/_Layout.cshtml";
 	ViewBag.Title = "ProgramEventRegistration";
@@ -21,176 +21,281 @@
 </head>
 <body class="theme_bg">
 	@*<header>
-		<div class="header_top">
-			<a class="navbar-brand" href="#"><img alt="mainlogo" src="~/Content/img/dashboard-logo.png"></a>
-			<div class="header-right">
-				<input name="search" class="search-field" type="text" placeholder="Search..">
-				<select class="drpdown">
-					<option>Our Other Sites</option>
-				</select>
-				<a class="fab fa-facebook-f" href="#"></a>
-				<a class="fab fa-twitter" href="#"></a>
-				<a class="fab fa-google-plus-g" href="#"></a>
-				<a class="fab fa-linkedin-in" href="#"></a>
-				<a class="fas fa-plus" href="#"></a>
-			</div>
-		</div>
-		<div class="header_nav">
-			<nav class="navbar navbar-expand-lg navbar-light">
-				<button class="navbar-toggler" aria-expanded="false" aria-controls="navbarSupportedContent" aria-label="Toggle navigation" type="button" data-target="#navbarSupportedContent" data-toggle="collapse"> <span class="navbar-toggler-icon"></span> </button>
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav mr-auto">
-						<li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
-						<li class="nav-item"> <a class="nav-link" href="#">About Us</a> </li>
-						<li class="nav-item"> <a class="nav-link" href="#">Donate</a> </li>
-						<li class="nav-item"> <a class="nav-link" href="#">Program/Event Registration</a> </li>
-						<li class="nav-item"> <a class="nav-link" href="#">Current Events</a> </li>
-						<li class="nav-item"> <a class="nav-link" href="#">Contact Us</a> </li>
-					</ul>
-					<div class="form-inline my-2 my-lg-0">
-						<span class="navbar-text">Welcome, Sri Rama</span>
-						<ul class="navbar-nav mr-auto">
-							<li class="nav-item"> <a class="nav-link" href="#">My Account</a> </li>
-							<li class="nav-item"> <a class="nav-link" href="#">Sign Out</a> </li>
-						</ul>
-						<a href="#"><img src="~/Content/img/cart-icon.png"> <span class="cart-count">2</span></a>
-					</div>
+			<div class="header_top">
+				<a class="navbar-brand" href="#"><img alt="mainlogo" src="~/Content/img/dashboard-logo.png"></a>
+				<div class="header-right">
+					<input name="search" class="search-field" type="text" placeholder="Search..">
+					<select class="drpdown">
+						<option>Our Other Sites</option>
+					</select>
+					<a class="fab fa-facebook-f" href="#"></a>
+					<a class="fab fa-twitter" href="#"></a>
+					<a class="fab fa-google-plus-g" href="#"></a>
+					<a class="fab fa-linkedin-in" href="#"></a>
+					<a class="fas fa-plus" href="#"></a>
 				</div>
-			</nav>
-		</div>
-	</header>*@
-<button class="navbar-toggler aside-toggle" aria-expanded="false" aria-controls="menu-content" aria-label="Toggle navigation" type="button" data-target="#menu-content" data-toggle="collapse"> <span class="navbar-toggler-icon"></span> </button>
-<div class="nav-side-menu">
-	<div class="menu-list">
-		<ul class="menu-content collapse out classes-list" id="menu-content">
-			<li><a href="#"> About Balavihar Classes </a></li>
-			<li><a href="#"> Link 2 </a></li>
-			<li><a href="#"> Link 3 </a></li>
-		</ul>
-	</div>
-</div>
-	
-<div class="bd-content">
-	<div class="row">
-		<div class="col-md-9">
-			<div class="regi-process-bar mt-0">
-				<div class="row">
-					<div class="col-md-5">
-						<div class="regi-heading">Register for Classes and Activities</div>
+			</div>
+			<div class="header_nav">
+				<nav class="navbar navbar-expand-lg navbar-light">
+					<button class="navbar-toggler" aria-expanded="false" aria-controls="navbarSupportedContent" aria-label="Toggle navigation" type="button" data-target="#navbarSupportedContent" data-toggle="collapse"> <span class="navbar-toggler-icon"></span> </button>
+					<div class="collapse navbar-collapse" id="navbarSupportedContent">
+						<ul class="navbar-nav mr-auto">
+							<li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
+							<li class="nav-item"> <a class="nav-link" href="#">About Us</a> </li>
+							<li class="nav-item"> <a class="nav-link" href="#">Donate</a> </li>
+							<li class="nav-item"> <a class="nav-link" href="#">Program/Event Registration</a> </li>
+							<li class="nav-item"> <a class="nav-link" href="#">Current Events</a> </li>
+							<li class="nav-item"> <a class="nav-link" href="#">Contact Us</a> </li>
+						</ul>
+						<div class="form-inline my-2 my-lg-0">
+							<span class="navbar-text">Welcome, Sri Rama</span>
+							<ul class="navbar-nav mr-auto">
+								<li class="nav-item"> <a class="nav-link" href="#">My Account</a> </li>
+								<li class="nav-item"> <a class="nav-link" href="#">Sign Out</a> </li>
+							</ul>
+							<a href="#"><img src="~/Content/img/cart-icon.png"> <span class="cart-count">2</span></a>
+						</div>
 					</div>
-					<div class="col-md-7">
-						<div class="row bs-wizard">
-							<div class="col-md-4 bs-wizard-step active">
-								<div class="progress">
-									<div class="progress-bar"></div>
-								</div>
-								<a class="bs-wizard-dot" href="property-type.html">1</a>
-								<div class="text-center bs-wizard-stepnum marl-55">Register</div>
-							</div>
-							<div class="col-md-4 bs-wizard-step disabled">
-									<!-- complete -->
-								<div class="progress">
-									<div class="progress-bar"></div>
-								</div>
-									<a class="bs-wizard-dot" href="property-details.html">2</a>
-								<div class="text-center bs-wizard-stepnum">Confirm</div>
-							</div>
+				</nav>
+			</div>
+		</header>*@
+	<button class="navbar-toggler aside-toggle" aria-expanded="false" aria-controls="menu-content" aria-label="Toggle navigation" type="button" data-target="#menu-content" data-toggle="collapse"> <span class="navbar-toggler-icon"></span> </button>
+	<div class="nav-side-menu">
+		<div class="menu-list">
+			<ul class="menu-content collapse out classes-list" id="menu-content">
+				<li><a href="#"> About Balavihar Classes </a></li>
+				<li><a href="#"> Link 2 </a></li>
+				<li><a href="#"> Link 3 </a></li>
+			</ul>
+		</div>
+	</div>
 
-							<div class="col-md-4 bs-wizard-step disabled">
+	<div class="bd-content">
+		<div class="row">
+			<div class="col-md-9">
+				<div class="regi-process-bar mt-0">
+					<div class="row">
+						<div class="col-md-5">
+							<div class="regi-heading">Register for Classes and Activities</div>
+						</div>
+						<div class="col-md-7">
+							<div class="row bs-wizard">
+								<div class="col-md-4 bs-wizard-step active">
+									<div class="progress">
+										<div class="progress-bar"></div>
+									</div>
+									<a class="bs-wizard-dot" href="property-type.html">1</a>
+									<div class="text-center bs-wizard-stepnum marl-55">Register</div>
+								</div>
+								<div class="col-md-4 bs-wizard-step disabled">
+									<!-- complete -->
+									<div class="progress">
+										<div class="progress-bar"></div>
+									</div>
+									<a class="bs-wizard-dot" href="property-details.html">2</a>
+									<div class="text-center bs-wizard-stepnum">Confirm</div>
+								</div>
+
+								<div class="col-md-4 bs-wizard-step disabled">
 									<!-- active -->
 									<div class="progress"><div class="progress-bar"></div></div>
 									<a class="bs-wizard-dot" href="listing-details.html">3</a>
 									<div class="text-center bs-wizard-stepnum marr-60">Pay</div>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	@using (Html.BeginForm("ProgramEventRegistration", "Account", FormMethod.Post))
+		@using (Html.BeginForm("ProgramEventRegistration", "Account", FormMethod.Post))
 	{
 		@Html.AntiForgeryToken()
+
+
+
 		<div class="row">
 			<div class="col-md-9">
 				<!--Accordion wrapper-->
 				<div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
 					<!-- Accordion card -->
 					@{int i = 0;}
-					
-						<div class="card">
+
+					<div class="card">
 						<!-- Card header -->
-							<div class="card-header" id="headingOne_0" role="tab">
-								
-								<a aria-expanded="true" aria-controls="collapseOne_0" href="#collapseOne_0" data-toggle="collapse" data-parent="#accordionEx">
-									<h5 class="mb-0">
-										@(ViewBag.obj.FirstName + " " + ViewBag.obj.LastName)<i class="fa fa-chevron-circle-down rotate-icon"></i>
-									</h5>
-								</a>								
-							</div>
+						<div class="card-header" id="headingOne_0" role="tab">
+
+							<a aria-expanded="true" aria-controls="collapseOne_0" href="#collapseOne_0" data-toggle="collapse" data-parent="#accordionEx">
+								<h5 class="mb-0">
+									@(ViewBag.obj.FirstName + " " + ViewBag.obj.LastName)<i class="fa fa-chevron-circle-down rotate-icon"></i>
+								</h5>
+							</a>
+						</div>
 						<!-- Card body -->
-							<div class="collapse show" id="collapseOne_0" role="tabpanel" aria-labelledby="headingOne_0" data-parent="#accordionEx">
+						<div class="collapse show" id="collapseOne_0" role="tabpanel" aria-labelledby="headingOne_0" data-parent="#accordionEx">
 							<div class="card-body">
-							
-							<table class="table table-borderless">
-								<tbody>
-									@foreach (var ev in ViewBag.Events)
-									{
+
+								<table class="table table-borderless">
+									<tbody>
+										@foreach (var ev in ViewBag.Events)
+										{
 										<tr>
-										<td>@ev.Name   </td>
-										<td>@ev.Weekday @ev.StartTime.ToString(@"hh\:mm") - @ev.EndTime.ToString(@"hh\:mm")</td>
-										<td>$@ev.Amount</td>
-										<td>
-										<label class="switch">
-										<input id="select_0" value="(@ev.Id)_select0" name="select" type="checkbox" checked=""/>
-										<span class="slider round"></span>
-										</label>
-										</td>
+											<td>@ev.Name   </td>
+											<td>@ev.Weekday @ev.StartTime.ToString(@"hh\:mm") - @ev.EndTime.ToString(@"hh\:mm")</td>
+											<td>$@ev.Amount</td>
+											<td>
+												<label class="switch">
+													<input id="select_0" value="@ev.Id)_select0" name="select" type="checkbox" checked="" />
+													<span class="slider round"></span>
+												</label>
+											</td>
+										</tr>
+										}
+									</tbody>
+								</table>
+							</div>
+						</div>
+
+					</div>
+
+					@foreach (var item in ViewBag.EventList)
+					{
+					<div class="card">
+						<div class="card-header" id="headingOne_@(i+1)" role="tab">
+
+							<a aria-expanded="true" aria-controls="collapseOne_@(i+1)" href="#collapseOne_@(i+1)" data-toggle="collapse" data-parent="#accordionEx">
+								<h5 class="mb-0">
+									@(item.FirstName + " " + item.LastName)<i class="fa fa-chevron-circle-down rotate-icon"></i>
+								</h5>
+							</a>
+						</div>
+
+						<div class="collapse" id="collapseOne_@(i+1)" role="tabpanel" aria-labelledby="headingOne_@(i+1)" data-parent="#accordionEx">
+							<div class="card-body">
+
+								<table class="table table-borderless">
+									<tbody>
+										@foreach (var ev in item.Events)
+										{
+										<tr>
+											<td>@ev.Name   </td>
+											<td>@ev.WeekdayName</td>
+											<td>$@ev.Amount</td>
+											<td>
+												<label class="switch">
+													<input id="select_@(i+1)" value="@ev.Id)_select@(i+1)" name="select" type="checkbox" checked="" />
+													<span class="slider round"></span>
+												</label>
+											</td>
 										</tr>
 									}
-								</tbody>
-							</table>
+									</tbody>
+								</table>
 							</div>
+						</div>
+
+					</div>
+				i++;
+			}
+				</div>
+			</div>
+			<div class="col-md-3">
+				<button class="btn btn-orange mb-3" name="nextBtn" type="submit" data-target="#demo" data-toggle="collapse">Checkout</button><br>
+				<button class="btn btn-secondary float-left" name="prevBtn" type="submit">Cancel</button>
+			</div>
+		</div>
+
+
+
+
+
+
+
+
+
+
+
+
+		@*<div class="row">
+			<div class="col-md-9">
+				<!--Accordion wrapper-->
+				<div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
+					<!-- Accordion card -->
+					@{int i = 0;}
+
+					<div class="card">
+						<!-- Card header -->
+						<div class="card-header" id="headingOne_0" role="tab">
+
+							<a aria-expanded="true" aria-controls="collapseOne_0" href="#collapseOne_0" data-toggle="collapse" data-parent="#accordionEx">
+								<h5 class="mb-0">
+									@(ViewBag.obj.FirstName + " " + ViewBag.obj.LastName)<i class="fa fa-chevron-circle-down rotate-icon"></i>
+								</h5>
+							</a>
+						</div>
+						<!-- Card body -->
+						<div class="collapse show" id="collapseOne_0" role="tabpanel" aria-labelledby="headingOne_0" data-parent="#accordionEx">
+							<div class="card-body">
+
+								<table class="table table-borderless">
+									<tbody>
+										@foreach (var ev in ViewBag.Events)
+										{
+											<tr>
+												<td>@ev.Name   </td>
+												<td>@ev.Weekday @ev.StartTime.ToString(@"hh\:mm") - @ev.EndTime.ToString(@"hh\:mm")</td>
+												<td>$@ev.Amount</td>
+												<td>
+													<label class="switch">
+														<input id="select_0" value="(@ev.Id)_select0" name="select" type="checkbox" checked="" />
+														<span class="slider round"></span>
+													</label>
+												</td>
+											</tr>
+										}
+									</tbody>
+								</table>
 							</div>
-							
-							</div>
-							
-							@foreach (var item in ViewBag.FamilyMember)
-							{
-								<div class="card">
+						</div>
+
+					</div>
+
+					@foreach (var item in ViewBag.FamilyMember)
+					{
+						<div class="card">
 							<div class="card-header" id="headingOne_@(i+1)" role="tab">
-								
+
 								<a aria-expanded="true" aria-controls="collapseOne_@(i+1)" href="#collapseOne_@(i+1)" data-toggle="collapse" data-parent="#accordionEx">
 									<h5 class="mb-0">
 										@(ViewBag.FamilyMember[i].FirstName + " " + ViewBag.FamilyMember[i].LastName)<i class="fa fa-chevron-circle-down rotate-icon"></i>
 									</h5>
-								</a>								
+								</a>
 							</div>
 
 							<div class="collapse" id="collapseOne_@(i+1)" role="tabpanel" aria-labelledby="headingOne_@(i+1)" data-parent="#accordionEx">
-							<div class="card-body">
-							
-							<table class="table table-borderless">
-								<tbody>
-									@foreach (var ev in ViewBag.Events)
-									{
-										<tr>
-										<td>@ev.Name   </td>
-										<td>@ev.Weekday</td>
-										<td>$@ev.Amount</td>
-										<td>
-										<label class="switch">
-										<input id="select_@(i+1)" value="(@ev.Id)_select@(i+1)" name="select" type="checkbox" checked=""/>
-										<span class="slider round"></span>
-										</label>
-										</td>
-										</tr>
-									 }
-								</tbody>
-							</table>
+								<div class="card-body">
+
+									<table class="table table-borderless">
+										<tbody>
+											@foreach (var ev in ViewBag.Events)
+											{
+												<tr>
+													<td>@ev.Name   </td>
+													<td>@ev.Weekday</td>
+													<td>$@ev.Amount</td>
+													<td>
+														<label class="switch">
+															<input id="select_@(i+1)" value="(@ev.Id)_select@(i+1)" name="select" type="checkbox" checked="" />
+															<span class="slider round"></span>
+														</label>
+													</td>
+												</tr>
+											}
+										</tbody>
+									</table>
+								</div>
 							</div>
-							</div>
-							
+
 						</div>
 						i++;
 					}
@@ -200,13 +305,13 @@
 				<button class="btn btn-orange mb-3" name="nextBtn" type="submit" data-target="#demo" data-toggle="collapse">Checkout</button><br>
 				<button class="btn btn-secondary float-left" name="prevBtn" type="submit">Cancel</button>
 			</div>
-		</div>
-	}
-</div>
-	
-	
-<!-- Latest compiled and minified JavaScript -->
-<script src="~/Content/bootstrap.min.js"></script>
+		</div>*@
+}
+	</div>
+
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="~/Content/bootstrap.min.js"></script>
 
 </body>
 </html>
