--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ClassesConfirm.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/ClassesConfirm.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model IEnumerable<Chinmaya.Registration.Models.ClassesConfirmModel>
 @{
 	Layout = "~/Views/Shared/_Layout.cshtml";
 	ViewBag.Title = "ClassesConfirm";
@@ -21,44 +21,44 @@
 </head>
 <body class="theme_bg">
 	@*<header>
-		<div class="header_top">
-			<a class="navbar-brand" href="#"><img alt="mainlogo" src="~/Content/img/dashboard-logo.png"></a>
-			<div class="header-right">
-				<input name="search" class="search-field" type="text" placeholder="Search..">
-				<select class="drpdown">
-					<option>Our Other Sites</option>
-				</select>
-				<a class="fab fa-facebook-f" href="#"></a>
-				<a class="fab fa-twitter" href="#"></a>
-				<a class="fab fa-google-plus-g" href="#"></a>
-				<a class="fab fa-linkedin-in" href="#"></a>
-				<a class="fas fa-plus" href="#"></a>
-			</div>
-		</div>
-		<div class="header_nav">
-			<nav class="navbar navbar-expand-lg navbar-light">
-				<button class="navbar-toggler" aria-expanded="false" aria-controls="navbarSupportedContent" aria-label="Toggle navigation" type="button" data-target="#navbarSupportedContent" data-toggle="collapse"> <span class="navbar-toggler-icon"></span> </button>
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav mr-auto">
-						<li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
-						<li class="nav-item"> <a class="nav-link" href="#">About Us</a> </li>
-						<li class="nav-item"> <a class="nav-link" href="#">Donate</a> </li>
-						<li class="nav-item"> <a class="nav-link" href="#">Program/Event Registration</a> </li>
-						<li class="nav-item"> <a class="nav-link" href="#">Current Events</a> </li>
-						<li class="nav-item"> <a class="nav-link" href="#">Contact Us</a> </li>
-					</ul>
-					<div class="form-inline my-2 my-lg-0">
-						<span class="navbar-text">Welcome, Sri Rama</span>
-						<ul class="navbar-nav mr-auto">
-							<li class="nav-item"> <a class="nav-link" href="#">My Account</a> </li>
-							<li class="nav-item"> <a class="nav-link" href="#">Sign Out</a> </li>
-						</ul>
-						<a href="#"><img src="~/Content/img/cart-icon.png"> <span class="cart-count">2</span></a>
-					</div>
+			<div class="header_top">
+				<a class="navbar-brand" href="#"><img alt="mainlogo" src="~/Content/img/dashboard-logo.png"></a>
+				<div class="header-right">
+					<input name="search" class="search-field" type="text" placeholder="Search..">
+					<select class="drpdown">
+						<option>Our Other Sites</option>
+					</select>
+					<a class="fab fa-facebook-f" href="#"></a>
+					<a class="fab fa-twitter" href="#"></a>
+					<a class="fab fa-google-plus-g" href="#"></a>
+					<a class="fab fa-linkedin-in" href="#"></a>
+					<a class="fas fa-plus" href="#"></a>
 				</div>
-			</nav>
-		</div>
-	</header>*@
+			</div>
+			<div class="header_nav">
+				<nav class="navbar navbar-expand-lg navbar-light">
+					<button class="navbar-toggler" aria-expanded="false" aria-controls="navbarSupportedContent" aria-label="Toggle navigation" type="button" data-target="#navbarSupportedContent" data-toggle="collapse"> <span class="navbar-toggler-icon"></span> </button>
+					<div class="collapse navbar-collapse" id="navbarSupportedContent">
+						<ul class="navbar-nav mr-auto">
+							<li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
+							<li class="nav-item"> <a class="nav-link" href="#">About Us</a> </li>
+							<li class="nav-item"> <a class="nav-link" href="#">Donate</a> </li>
+							<li class="nav-item"> <a class="nav-link" href="#">Program/Event Registration</a> </li>
+							<li class="nav-item"> <a class="nav-link" href="#">Current Events</a> </li>
+							<li class="nav-item"> <a class="nav-link" href="#">Contact Us</a> </li>
+						</ul>
+						<div class="form-inline my-2 my-lg-0">
+							<span class="navbar-text">Welcome, Sri Rama</span>
+							<ul class="navbar-nav mr-auto">
+								<li class="nav-item"> <a class="nav-link" href="#">My Account</a> </li>
+								<li class="nav-item"> <a class="nav-link" href="#">Sign Out</a> </li>
+							</ul>
+							<a href="#"><img src="~/Content/img/cart-icon.png"> <span class="cart-count">2</span></a>
+						</div>
+					</div>
+				</nav>
+			</div>
+		</header>*@
 	<button class="navbar-toggler aside-toggle" aria-expanded="false" aria-controls="menu-content" aria-label="Toggle navigation" type="button" data-target="#menu-content" data-toggle="collapse"> <span class="navbar-toggler-icon"></span> </button>
 	<div class="nav-side-menu">
 
@@ -114,254 +114,84 @@
 		@using (Html.BeginForm("ClassesConfirm", "Account", FormMethod.Post))
 		{
 			@Html.AntiForgeryToken()
-		<div class="row">
-			
-			
-			
-			@*<div class="col-md-9">
-				<!--Accordion wrapper-->
-				<div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
-					<!-- Accordion card -->
-					@foreach (var fm in ViewBag.FamilyMember)
-					{
-					<div class="card">
-						<!-- Card header -->
-						<div class="card-header" id="headingOne1" role="tab">
-							<a aria-expanded="true" aria-controls="collapseOne1" href="#collapseOne1" data-toggle="collapse" data-parent="#accordionEx">
-								<h5 class="mb-0">
-									@(fm.FirstName + " " + fm.LastName)<i class="fa fa-chevron-circle-down rotate-icon"></i>
-								</h5>
-							</a>
-						</div>
-						<!-- Card body -->
-						<div class="collapse show" id="collapseOne1" role="tabpanel" aria-labelledby="headingOne1" data-parent="#accordionEx">
-							<div class="card-body">
-								<table class="table table-borderless">
-									<tbody>
-										@foreach (var ev in ViewBag.Events)
-										{
-										<tr>
-											<td>@ev.Name   </td>
-											<td>@ev.Weekday</td>
-											<td>@ev.Amount</td>
-											<td>
-												<label class="switch">
-													<input type="checkbox" checked="">
-													<span class="slider round"></span>
-												</label>
-											</td>
-										</tr>
-										}*@
-										@*<tr>
-											<td>Vedic Chanting   </td>
-											<td>Sunday 12.15 - 12.45 pm</td>
-											<td>$325</td>
-											<td>
-												<label class="switch">
-													<input type="checkbox" checked="">
-													<span class="slider round"></span>
-												</label>
-											</td>
-										</tr>*@
-									@*</tbody>
-								</table>
+			<div class="row">
+				
+				<div class="col-md-9">
+					<!--Accordion wrapper-->
+					<div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
+						<!-- Accordion card -->
+						@{int i = 0;}
+						
+						@foreach (var item in Model)
+						{
+							<div class="card">
+								<div class="card-header" id="headingOne_@(i+1)" role="tab">
+
+									<a aria-expanded="true" aria-controls="collapseOne_@(i+1)" href="#collapseOne_@(i+1)" data-toggle="collapse" data-parent="#accordionEx">
+										<h5 class="mb-0">
+											@(item.uFamilyMembers.FirstName + " " + item.uFamilyMembers.LastName)<i class="fa fa-chevron-circle-down rotate-icon"></i>
+										</h5>
+									</a>
+								</div>
+
+								<div class="collapse" id="collapseOne_@(i+1)" role="tabpanel" aria-labelledby="headingOne_@(i+1)" data-parent="#accordionEx">
+									<div class="card-body">
+
+										<table class="table table-borderless">
+											<tbody>
+												
+												@foreach (var ev in item.Events)
+												{
+													<tr>
+														<td>@ev.Name</td>
+														<td>@ev.Weekday</td>
+														<td>$@ev.Amount</td>
+														<td>
+															<label class="switch">
+																<input id="select_@(i + 1)" value="(@ev.Id)_select@(i + 1)" name="select" type="checkbox" checked=""/>
+																<span class="slider round"></span>
+															</label>
+														</td>
+													</tr>
+												
+												}
+											</tbody>
+										</table>
+									</div>
+								</div>
+
 							</div>
-						</div>
+							i++;
+						}
 					</div>
-					}*@
-					<!-- Accordion card -->
-					<!-- Accordion card -->
+				</div>
 
-
-
-					@*<div class="card">
-						<!-- Card header -->
-						<div class="card-header" id="headingTwo2" role="tab">
-							<a class="collapsed" aria-expanded="false" aria-controls="collapseTwo2" href="#collapseTwo2" data-toggle="collapse" data-parent="#accordionEx">
-								<h5 class="mb-0">
-									Sri Rama <i class="fa fa-chevron-circle-down rotate-icon"></i>
-								</h5>
-							</a>
-						</div>
-						<!-- Card body -->
-						<div class="collapse" id="collapseTwo2" role="tabpanel" aria-labelledby="headingTwo2" data-parent="#accordionEx">
-							<div class="card-body">
-								<table class="table table-borderless">
-									<tbody>
-										<tr>
-											<td>Vedic Chanting   </td>
-											<td>Sunday 12.15 - 12.45 pm</td>
-											<td>$325</td>
-											<td>
-												<label class="switch">
-													<input type="checkbox" checked="">
-													<span class="slider round"></span>
-												</label>
-											</td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
-						</div>
+				<div class="col-md-3">
+					<div class="form-group form-check">
+						<input class="form-check-input" id="exampleCheck1" type="checkbox">
+						<label class="form-check-label" for="exampleCheck1">
+							I agree to the
+							<br><a href="#">terms and conditions</a>
+						</label>
 					</div>
-					<!-- Accordion card -->
-					<!-- Accordion card -->
-					<div class="card">
-						<!-- Card header -->
-						<div class="card-header" id="headingThree3" role="tab">
-							<a class="collapsed" aria-expanded="false" aria-controls="collapseThree3" href="#collapseThree3" data-toggle="collapse" data-parent="#accordionEx">
-								<h5 class="mb-0">
-									Laxman <i class="fa fa-chevron-circle-down rotate-icon"></i>
-								</h5>
-							</a>
-						</div>
-						<!-- Card body -->
-						<div class="collapse" id="collapseThree3" role="tabpanel" aria-labelledby="headingThree3" data-parent="#accordionEx">
-							<div class="card-body">
-								<table class="table table-borderless">
-									<tbody>
-										<tr>
-											<td>Vedic Chanting   </td>
-											<td>Sunday 12.15 - 12.45 pm</td>
-											<td>$325</td>
-											<td>
-												<label class="switch">
-													<input type="checkbox" checked="">
-													<span class="slider round"></span>
-												</label>
-											</td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
-						</div>
+					<div class="form-group form-check">
+						<input class="form-check-input" id="exampleCheck1" type="checkbox">
+						<label class="form-check-label" for="exampleCheck1">
+							Add me to the
+							Chinmaya Directory
+						</label>
 					</div>
-					<!-- Accordion card -->*@
-
-
-
-				@*</div>*@
-				<!-- Accordion wrapper -->
-			@*</div>*@
-
-
-
-			<div class="col-md-9">
-				<!--Accordion wrapper-->
-				<div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
-					<!-- Accordion card -->
-					@{int i = 0;}
-					
-						<div class="card">
-						<!-- Card header -->
-							<div class="card-header" id="headingOne_0" role="tab">
-								
-								<a aria-expanded="true" aria-controls="collapseOne_0" href="#collapseOne_0" data-toggle="collapse" data-parent="#accordionEx">
-									<h5 class="mb-0">
-										@(ViewBag.obj.FirstName + " " + ViewBag.obj.LastName)<i class="fa fa-chevron-circle-down rotate-icon"></i>
-									</h5>
-								</a>								
-							</div>
-						<!-- Card body -->
-							<div class="collapse show" id="collapseOne_0" role="tabpanel" aria-labelledby="headingOne_0" data-parent="#accordionEx">
-							<div class="card-body">
-							
-							<table class="table table-borderless">
-								<tbody>
-									@foreach (var ev in ViewBag.Events)
-									{
-										<tr>
-										<td>@ev.Name   </td>
-										<td>@ev.Weekday @ev.StartTime.ToString(@"hh\:mm") - @ev.EndTime.ToString(@"hh\:mm")</td>
-										<td>$@ev.Amount</td>
-										<td>
-										<label class="switch">
-										
-										<input id="select_0" value="(@ev.Id)_select0" name="select" type="checkbox"/>
-										<span class="slider round"></span>
-										</label>
-										</td>
-										</tr>
-									}
-								</tbody>
-							</table>
-							</div>
-							</div>
-							
-							</div>
-							
-							@foreach (var item in ViewBag.FamilyMember)
-							{
-								<div class="card">
-							<div class="card-header" id="headingOne_@(i+1)" role="tab">
-								
-								<a aria-expanded="true" aria-controls="collapseOne_@(i+1)" href="#collapseOne_@(i+1)" data-toggle="collapse" data-parent="#accordionEx">
-									<h5 class="mb-0">
-										@(ViewBag.FamilyMember[i].FirstName + " " + ViewBag.FamilyMember[i].LastName)<i class="fa fa-chevron-circle-down rotate-icon"></i>
-									</h5>
-								</a>								
-							</div>
-
-							<div class="collapse" id="collapseOne_@(i+1)" role="tabpanel" aria-labelledby="headingOne_@(i+1)" data-parent="#accordionEx">
-							<div class="card-body">
-							
-							<table class="table table-borderless">
-								<tbody>
-									@foreach (var ev in ViewBag.Events)
-									{
-										<tr>
-										<td>@ev.Name   </td>
-										<td>@ev.Weekday</td>
-										<td>$@ev.Amount</td>
-										<td>
-										<label class="switch">
-										<input id="select_@(i+1)" value="(@ev.Id)_select@(i+1)" name="select" type="checkbox"/>
-										<span class="slider round"></span>
-										</label>
-										</td>
-										</tr>
-									 }
-								</tbody>
-							</table>
-							</div>
-							</div>
-							
-						</div>
-						i++;
-					}
+					<button class="btn btn-secondary mb-3" name="prevBtn" type="submit">Back</button><br>
+					<button class="btn btn-orange" name="nextBtn" type="submit" data-target="#demo" data-toggle="collapse">Proceed to checkout</button>
 				</div>
 			</div>
-
-
-
-			<div class="col-md-3">
-				<div class="form-group form-check">
-					<input class="form-check-input" id="exampleCheck1" type="checkbox">
-					<label class="form-check-label" for="exampleCheck1">
-						I agree to the
-						<br><a href="#">terms and conditions</a>
-					</label>
-				</div>
-				<div class="form-group form-check">
-					<input class="form-check-input" id="exampleCheck1" type="checkbox">
-					<label class="form-check-label" for="exampleCheck1">
-						Add me to the
-						Chinmaya Directory
-					</label>
-				</div>
-				<button class="btn btn-secondary mb-3" name="prevBtn" type="submit">Back</button><br>
-				<button class="btn btn-orange" name="nextBtn" type="submit" data-target="#demo" data-toggle="collapse">Proceed to checkout</button>
-			</div>
-		</div>
 		}
 	</div>
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="~/Content/bootstrap.min.js"></script>
 	<script>
 		$(document).ready(function () {
-			
-			//$('input.type_checkbox[value=(5f13fb83-fbec-42af-937e-c2584d5c807f)_select0]').prop('checked', false);
-			$('input.type_checkbox[value="(5f13fb83-fbec-42af-937e-c2584d5c807f)_select0"]').prop('checked', true);
+			$('#collapseOne_1').removeClass('collapse').addClass('collapse show');
 		});
 	</script>
 </body>
