--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/AccountDetails.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/AccountDetails.cshtml
@@ -25,6 +25,9 @@
 			font-weight: bold;
 			color: red;
 		}
+		.field-validation-error {
+			color: red;
+		}
 	</style>
 	@{
 		List<SelectListItem> listItems = new List<SelectListItem>();
@@ -65,21 +68,21 @@
 								<div class="row bs-wizard">
 									<div class="col-md-4 bs-wizard-step complete">
 										<div class="progress"><div class="progress-bar"></div></div>
-										<a class="bs-wizard-dot" href="property-type.html">1</a>
+										<a class="bs-wizard-dot" href="/Account/BindingDataPersonalDetails">1</a>
 										<div class="text-center bs-wizard-stepnum marl-55">Personal</div>
 									</div>
 
 									<div class="col-md-4 bs-wizard-step complete">
 
 										<div class="progress"><div class="progress-bar"></div></div>
-										<a class="bs-wizard-dot" href="property-details.html">2</a>
+										<a class="bs-wizard-dot" href="/Account/PersonalDetails">2</a>
 										<div class="text-center bs-wizard-stepnum">Contact</div>
 									</div>
 
 									<div class="col-md-4 bs-wizard-step active">
 
 										<div class="progress"><div class="progress-bar"></div></div>
-										<a class="bs-wizard-dot" href="listing-details.html">3</a>
+										<a class="bs-wizard-dot" href="/Account/ContactDetails">3</a>
 										<div class="text-center bs-wizard-stepnum marr-60">Account</div>
 									</div>
 								</div>
@@ -92,7 +95,7 @@
 							<div class="col-md-6 offset-md-3">
 								<p class="pb-3">
 									<span class="red-txt">*</span> denotes a required field<br />
-									Please select atleast 2 Security Questions.
+									<span class="red-txt">Please select atleast 2 Security Questions.</span>
 								</p>
 								@Html.LabelFor(m => m.Email, new { @class = "requiredA" })
 								@Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
