--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/MyAccount.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/MyAccount.cshtml
@@ -15,6 +15,9 @@
 			font-weight: bold;
 			color: red;
 		}
+		.field-validation-error {
+			color: red;
+		}
 	</style>
 
 	<meta charset="utf-8">
