Security Questions value binding after validation check issue fixed

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/AccountDetails.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/AccountDetails.cshtml
@@ -138,7 +138,7 @@
 								<div id="dataTextBox" class="col-md-4">
 									@*@Html.TextBoxFor(m => m.SecurityQuestionsModel[i].Value)*@
 
-									<input type='text' class = "form-control" name="AnswerTextbox_@(i+1)" id="AnswerTextbox_@(i+1)" value="" />
+                                    <input type='text' class="form-control" name="AnswerTextbox_@(i+1)" id="AnswerTextbox_@(i+1)" value="@Model.SecurityQuestionsModel[i].Value" />
 								</div>
 							</div>
 								}
